ShapeDetection: use makeNonTextureImage() to support texture-backed sources

In certain cases (as reported in the bug) the SkImage used for detection
happens to be texture-backed.  This CL uses makeNonTextureImage()
which solves this problem while doing nothing when the SkImage is not
texture backed (i.e. is raster).

BUG=714927

Review-Url: https://codereview.chromium.org/2837273003
Cr-Commit-Position: refs/heads/master@{#467192}

Former-commit-id: d7d447a09a95eb7ad399eb8512f677a66e127d69